--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,58 @@
 *{
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
+}
+
+.main-container{
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.text{
+  letter-spacing: 16px;
+  transform: rotate(-30deg);
+}
+.container{
+  z-index: 100;
+  opacity: 0.5;
+  background-color: rgb(255, 255, 255);
+  color: white;
+  font-size: 36px;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.test{
+  z-index: 1000;
+  position: absolute;
+  bottom: 50px;
+  right: 80px;  
+  padding: 16px 22px;
+  font-size: 40px;
+  color: white;
+  background-color: black;
+}
+.image-test{
+  z-index: 1000;
+  position: absolute;
+  bottom: 176px;
+  right: 40px;
+}
+
+#pixi-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
